Fix smooth scroll on safari

--- a/app/assets/stylesheets/smooth-scroll/smooth-scroll.css.scss
+++ b/app/assets/stylesheets/smooth-scroll/smooth-scroll.css.scss
@@ -1,19 +1,22 @@
 @mixin transition-delay($second) {
   transition-delay: $second;
   -o-transition-delay: $second;
+  -ms-transition-delay: $second;
   -moz-transition-delay: $second;
   -webkit-transition-delay: $second;
 }
 
 @mixin transform-translate($pixel) {
+  transform:          translate(0, $pixel);
+  -o-transform:       translate(0, $pixel);
   -moz-transform:     translate(0, $pixel);
   -ms-transform:      translate(0, $pixel);
   -webkit-transform:  translate(0, $pixel);
-  transform:          translate(0, $pixel);
-  -moz-transform:     translate3d(0, $pixel, 0);
-  -ms-transform:      translate3d(0, $pixel, 0);
-  -webkit-transform:  translate3d(0, $pixel, 0);
   transform:          translate3d(0, $pixel, 0);
+  -o-transform:       translate3d(0, $pixel, 0);
+  -ms-transform:      translate3d(0, $pixel, 0);
+  -moz-transform:     translate3d(0, $pixel, 0);
+  -webkit-transform:  translate3d(0, $pixel, 0);
 }
 
 @media (min-width: 480px) {
@@ -24,15 +27,16 @@
   .banner-wrap, main, footer {
     @include transform-translate(0px);
 
-    -webkit-transition: transform 1000ms cubic-bezier(0.585, 0.005, 0.320, 1); /* older webkit */
-    -webkit-transition: transform 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
-       -moz-transition: transform 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
-         -o-transition: transform 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
-            transition: transform 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
-
+    -webkit-transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1); /* older webkit */
+    -webkit-transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
+       -moz-transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
+        -ms-transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
+         -o-transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
+            transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
     -webkit-transition-timing-function: cubic-bezier(0.585, 0.005, 0.320, 1); /* older webkit */
     -webkit-transition-timing-function: cubic-bezier(0.585, 0.005, 0.320, 1.005);
        -moz-transition-timing-function: cubic-bezier(0.585, 0.005, 0.320, 1.005);
+        -ms-transition-timing-function: cubic-bezier(0.585, 0.005, 0.320, 1.005);
          -o-transition-timing-function: cubic-bezier(0.585, 0.005, 0.320, 1.005);
             transition-timing-function: cubic-bezier(0.585, 0.005, 0.320, 1.005);
   }
@@ -45,6 +49,7 @@
     -webkit-transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1); /* older webkit */
     -webkit-transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
        -moz-transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
+        -ms-transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
          -o-transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
             transition: all 1000ms cubic-bezier(0.585, 0.005, 0.320, 1.005);
   }
